@@ -199,7 +199,7 @@ final class ConcurrentDirectQuickSelectSketch extends DirectQuickSelectSketch
 
   @Override
   public final void initBgPropagationService() {
-    executorService_ = ConcurrentPropagationService.getExecutorService(Thread.currentThread().getId());
+    executorService_ = ConcurrentPropagationService.getExecutorService(Thread.currentThread().threadId());
   }
 
   @Override
@@ -258,7 +258,7 @@ final class ConcurrentDirectQuickSelectSketch extends DirectQuickSelectSketch
   private void advanceEpoch() {
     awaitBgPropagationTermination();
     startEagerPropagation();
-    ConcurrentPropagationService.resetExecutorService(Thread.currentThread().getId());
+    ConcurrentPropagationService.resetExecutorService(Thread.currentThread().threadId());
     //no inspection NonAtomicOperationOnVolatileField
     // this increment of a volatile field is done within the scope of the propagation
     // synchronization and hence is done by a single thread.
